🐜 fixed responsive design bug.
 squashed bug where size of widget between 760 and 600 isn't correct.

--- a/_chat_style_prod.css
+++ b/_chat_style_prod.css
@@ -98,7 +98,7 @@ html {
     width: 1.5rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 760px) {
     .chatwidget__block {
         position: absolute;
         bottom: 0;
